# ai_connector_marketplace

./: .gitignore  CLAUDE.md  README.md  package.json  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: main.py
backend/core/: config_manager.py
backend/models/: mcp.py
backend/routers/: installer_router.py  registry_router.py
backend/services/: installer_service.py  registry_service.py
docs/: PACKAGING.md  ROADMAP.md
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: CardGrid.tsx  ClaudeWebGuide.tsx  DependencyBanner.tsx  DetailPanel.tsx  InstallForm.tsx  InstallLog.tsx  McpCard.tsx  PlatformBadges.tsx  ProfileBar.tsx  SearchBar.tsx  Sidebar.tsx  Toast.tsx  TransportBadge.tsx
frontend/lib/: api.ts  labels.ts  types.ts
registry/: mcps.json  profiles.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
