[package]
name = "ai-connector-marketplace"
version = "1.0.0"
description = "Local app store for MCP servers — desktop shell"
authors = ["aldirrss"]
edition = "2021"
rust-version = "1.77"

# The library lets the same entrypoint be reused across desktop/mobile targets.
[lib]
name = "ai_connector_marketplace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
